--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -35,6 +35,7 @@
   padding: 0 20px;
 }
 
+
 .hero-title {
 
   -webkit-text-stroke: .5px black; /* thickness + stroke color */
@@ -121,4 +122,29 @@
   .content-wrapper h2 {
     font-size: 2rem;
   }
+}
+.typewriter-text {
+  color: #fdfdfd;         /* highlight typed text */
+  -webkit-text-stroke: 0.5px black;
+  font-weight: 900;
+}
+
+
+
+
+.popular-destination{
+text-align: center;
+font-size: 32px;
+font-size: 2.5rem;  /* you can use px, rem, em, % */
+  font-weight: bold; /* optional, makes it thicker */
+
+}
+
+.handpick{
+text-align: center;
+font-size: 32px;  /* you can use px, rem, em, % */
+font-size: 2.5rem;  /* you can use px, rem, em, % */
+
+font-weight: bold; /* optional, makes it thicker */
+
 }
