--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -59,7 +59,7 @@
   margin-right: 60px;
 }
 .plan-button:hover {
-  background-color: #12b406;
+  background-color:  #56a3c5;
   transform: translateY(-2px);
   box-shadow: 0 6px 12px rgba(0, 0, 0, 0.15);
 }
