update 1: made a changes in packages section and also changes ther about section

--- a/src/components/About us/Aboutus.css
+++ b/src/components/About us/Aboutus.css
@@ -8,12 +8,29 @@
   color: black;
 }
 .about-us{
-  font-size:  1rem !important;;
-
-
+  font-size:  1rem !important;
+  letter-spacing: 2px;
+  font-weight: 600;
+  position: relative;
+  display: inline-block;
+  color: black;
 }
+.about-us::after{
+  content: '';
+  position: absolute;
+  left: 0;
+  bottom: -9px;
+  width: 60px;
+  height: 2px;
+  background: black;
+  border-radius: 1px;
+}
+
+
 .about-journey{
   font-size: 4.5 !important;
+  font-family: 'Georgia', serif;
+  
 }
 
 .about-image img {
@@ -73,4 +90,12 @@
 }
 
 
+.order-list{
+  margin-bottom: rem;
+}
 
+
+.about-discription{
+  margin-bottom: 1.5rem;
+  
+}
